fixed spacing issue on contact section building background

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -65,6 +65,10 @@
     //Contact Section
     .contact {
 
+        h2 {
+            text-align: center;
+        }
+
         .flexContainer {
                 flex-direction: column;
         }
