--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -89,3 +89,10 @@ textarea::placeholder {
     font-family: $secondary-font;
     font-size: 1.2rem;
 }
+
+//Project-specific Typography
+
+.projectSource {
+    color: $aside;
+    letter-spacing: 0px;
+}
