--- a/styles/style.css
+++ b/styles/style.css
@@ -409,6 +409,11 @@ textarea::placeholder {
   font-size: 1.2rem;
 }
 
+.projectSource {
+  color: #B7B7B7;
+  letter-spacing: 0px;
+}
+
 body {
   -webkit-animation: fadeInAnimation ease 2s;
           animation: fadeInAnimation ease 2s;
@@ -1038,6 +1043,9 @@ footer img {
     margin-bottom: 15px;
   }
 
+  .contact h2 {
+    text-align: center;
+  }
   .contact .flexContainer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
